CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ArgTable C)

SET(ARGTABLE_INC ${CMAKE_SOURCE_DIR}/libs/include)
SET(ARGTABLE_LIB ${CMAKE_SOURCE_DIR}/libs/lib/libargtable2.a)
SET(DEBUG_FLAGS "-ggdb -Wall -Wextra -Winline -Wfatal-errors -pedantic")
SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c11 -D_REENTRANT ${DEBUG_FLAGS}")

INCLUDE_DIRECTORIES(
    ${ARGTABLE_INC}
)

ADD_SUBDIRECTORY(args)

ADD_EXECUTABLE(ArgTable ${TAB_SRCS})
TARGET_LINK_LIBRARIES(ArgTable ${ARGTABLE_LIB})

ADD_EXECUTABLE(ArgP ${ARGP_SRCS})

